--- a/inference_loudness_transfer.ipynb
+++ b/inference_loudness_transfer.ipynb
@@ -46,7 +46,7 @@
     "MODEL_PATH = f'{TRAIN_PATH}/model_10000.ckpt'\n",
     "CONFIG_PATH = f'{TRAIN_PATH}/config.pickle'\n",
     "\n",
-    "#path to the training data used to train de model\n",
+    "#path to the target loudness sound\n",
     "TARGET_LOUDNESS_AUDIO_PATH = 'inference_sounds/beatbox.wav'\n",
     "\n",
     "with (open(CONFIG_PATH, \"rb\")) as f:\n",
