--- a/inference_randomisation.ipynb
+++ b/inference_randomisation.ipynb
@@ -65,6 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This example works for models trained with loudness or loudness and centroid.\n",
+    "# For user-defined control parameters you need to load them manually.\n",
     "if len(config.auto_control_params) != 2:\n",
     "    if config.auto_control_params == \"loudness\":\n",
     "        loudness, _, _ = compute_loudness(audio_data=x_audio, sampling_rate=FS)\n",
